added header to home page

--- a/home.html
+++ b/home.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 
+<header>
+    <nav>
+        <ul>
+            <li>Home</li>
+        </ul>
+    </nav>
+</header>
+
 <p>
     FullStack diploma project
 </p>
