--- a/home.html
+++ b/home.html
@@ -14,6 +14,10 @@
     </nav>
 </header>
 
+<main>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, et!</p>
+</main>
+
 <p>
     FullStack diploma project
 </p>
