--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 
@@ -10,6 +11,8 @@
     <nav>
         <ul>
             <li>Home</li>
+            <li>Contacts</li>
+            <li>About me</li>
         </ul>
     </nav>
 </header>
@@ -25,6 +28,9 @@
 <footer>
     copyright 2018
 </footer>
+
+
+<script src="js/build.js"></script>
 
 </body>
 </html>
